SEBSERV-984 implement new endpoint for bulk unlock screen