@@ -255,7 +255,7 @@ public class ClientEventDAOImpl implements ClientEventDAO {
                         "Failed to find pending notification event for confirm:" + notificationValueId);
             }
 
-            return records.get(0);
+            return records.getFirst();
         })
                 .flatMap(ClientEventDAOImpl::toDomainModel);
     }
@@ -272,6 +272,21 @@ public class ClientEventDAOImpl implements ClientEventDAO {
                 .stream()
                 .map(ClientEventDAOImpl::toDomainModel)
                 .flatMap(DAOLoggingSupport::logAndSkipOnError)
+                .collect(Collectors.toList()));
+    }
+
+    @Override
+    public Result<List<ClientNotification>> getPendingLockScreenNotifications(Set<Long> connectionIds) {
+        return Result.tryCatch(() -> this.clientNotificationRecordMapper
+                .selectByExample()
+                .where(ClientNotificationRecordDynamicSqlSupport.clientConnectionId, isIn(connectionIds))
+                .and(ClientNotificationRecordDynamicSqlSupport.eventType, isEqualTo(EventType.NOTIFICATION.id))
+                .build()
+                .execute()
+                .stream()
+                .map(ClientEventDAOImpl::toDomainModel)
+                .flatMap(DAOLoggingSupport::logAndSkipOnError)
+                .filter(notification -> notification.notificationType == NotificationType.LOCK_SCREEN)
                 .collect(Collectors.toList()));
     }
 
